Added tests in TestInstituteController. tested 6 APIs. InstituteCategoryType(SQL to Mongo).